tests/compile_fail/invalid_keyframe_offset_literal.rs
use surgeist_style::KeyframeOffset;

fn main() {
    let _offset = KeyframeOffset { percent: 50.0 };
}
